# LITHIUM

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-MIT  README.md
go-lithium/: go.mod  lithium.go  lithium_test.go
lithium_circom/circom_compiler/: Cargo.toml
lithium_circom/circom_ffi/: Cargo.toml
lithium_circom/constraint_system/: Cargo.toml
lithium_circuit/circuit_compiler/: Cargo.toml
lithium_circuit/circuit_compiler/src/: lang.lalrpop  lib.rs
lithium_circuit/circuit_compiler/src/ast/: bus.rs  expression.rs  function.rs  ident.rs  mod.rs  statement.rs  template.rs
lithium_circuit/circuit_compiler/src/ast/expression/: anonymous_component_expression.rs  binary_operation.rs  call_expression.rs  infix_expression.rs  inline_switch_expression.rs  prefix_expression.rs  unary_operation.rs  uniform_array_expression.rs
lithium_circuit/circuit_compiler/src/ast/statement/: assign_statement.rs  path.rs  while_statement.rs
lithium_circuit/circuit_compiler/src/parser/: errors.rs  item.rs  mod.rs  parser.rs
lithium_circuit/circuit_program/: Cargo.toml
lithium_circuit/reporter/: Cargo.toml
lithium_circuit/reporter/src/: lib.rs  reporter.rs
lithium_circuit/reporter/src/call_stack/: helper.rs  id.rs  mod.rs  tree.rs
lithium_circuit/reporter/src/position/: located.rs  location.rs  mod.rs  span.rs
utils/file_map/: Cargo.toml
utils/file_map/src/: fm.rs  lib.rs
utils/iter_extended/: Cargo.toml
