[workspace]
members = []

resolver = "2"

[workspace.package]
# x-release-please-start-version
version = "1.0.0-beta.1"
# x-release-please-end
authors = ["Vomer <tarasworonjanski@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xVomer/LITHIUM/"

[workspace.lints.rust]
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
