[workspace]

members = [
"lithium_circom/circom_ffi",
"lithium_circom/circom_compiler",
"lithium_circom/constraint_system",
]

resolver = "2"

[workspace.package]
# x-release-please-start-version
version = "1.0.0-beta.1"
# x-release-please-end
authors = ["Vomer <tarasworonjanski@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xVomer/LITHIUM/"

[workspace.lints.rust]
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"



[workspace.dependencies]
ffi = { path = "lithium_circom/circom_ffi"}
compiler = { path = "lithium_circom/circom_compiler"}
syscs = { path = "lithium_circom/constraint_system"}

codespan = { version = "0.11.1", features = ["serialization"] }
codespan-lsp = "0.11.1"
codespan-reporting = "0.11.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
