[workspace]

members = [

"lithium_circuit/circuit_program",
"lithium_circuit/circuit_compiler",
"lithium_circuit/reporter",

# Utils
"utils/iter_extended",
"utils/file_map"

]

resolver = "2"

[workspace.package]
# x-release-please-start-version
version = "1.0.0-beta.1"
# x-release-please-end
authors = ["Vomer <tarasworonjanski@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xVomer/LITHIUM/"

[workspace.lints.rust]
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[workspace.dependencies]
circuit-program = { path = "lithium_circuit/circuit_program" }
circuit-compiler = { path = "lithium_circuit/circuit_compiler" }
reporter = { path = "lithium_circuit/reporter" }

iter_extended = { path = "utils/iter_extended"}
file_map = { path = "utils/file_map"}

codespan = { version = "0.11.1", features = ["serialization"] }
codespan-lsp = "0.11.1"
codespan-reporting = "0.11.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
build-data = "0.1.3"
toml = "0.7.2"
tracing = "0.1.40"
tracing-web = "0.1.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
dirs = "4"
thiserror = "1.0.21"
url = "2.5.4"
tempfile = "3.6.0"
test-case = "3.3.1"
smol_str = { version = "0.3.2", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive", "env"] }
fxhash = "0.2.1"
color-eyre = "0.6.2"
flate2 = "1.0.24"
base64 = "0.21.2"
const_format = "0.2.30"
num-bigint = "0.4"
num-traits = "0.2"
num_enum = "0.7.3"
num-integer = "0.1"
num-bigint-dig = "0.8.4"
rayon = "1.8.0"
strum_macros = "0.24"
strum = "0.24"
