[package]
name = "file_map"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting.workspace = true
serde.workspace = true
serde_json.workspace = true
iter_extended.workspace = true
